--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://dbescola.c61lm2mxkkwh.us-east-2.rds.amazonaws.com/db_dbEscola?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSL=false
-spring.datasource.username=admin
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://localhost/db_nsg?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Brazil/East
-
